Fix issue: color gradient was not visible on counter

--- a/src/styles/components/_counter.scss
+++ b/src/styles/components/_counter.scss
@@ -33,7 +33,6 @@
 
     max-height: 300px;
     max-width: 300px;
-    overflow: hidden;
 
     width: 100%;
 
@@ -44,6 +43,7 @@
     background-clip: padding-box;
     background-color: var(--clr-secondary-800);
     box-shadow: -50px -50px 100px #272c5a, 50px 50px 100px #121530;
+
     @include breakpoint(medium) {
       max-height: 410px;
       max-width: 410px;
